...
    <string name="logo">logo</string>

    <string name="comparar_jogador_string">Comparar Jogadores de mesma Posição</string>
    <string name="ranking_jogador_string">Ranking de Jogador por Posição</string>
    <string name="info_jogador_string">Informações de Jogadores</string>
    <string name="comparar_time_string">Comparar Times</string>
    <string name="info_time_string">Informações de Times</string>
    <string name="ranking_time_string">Ranking de Times</string>

    <string name="centroavante_string">Centroavante</string>
    <string name="seg_ata_string">Segundo Atacante</string>
    <string name="gol_string">Goleiro</string>
    <string name="lat_esq_string">Lateral Esquerdo</string>
    <string name="lat_dir_string">Lateral Direito</string>
    <string name="meia_string">Meia</string>
    <string name="voltante_string">Volante</string>
    <string name="seg_vol_string">Segundo Volante</string>
    <string name="zagueiro_string">Zagueiro</string>

    <string name="aGO_string">Atlético-GO</string>
    <string name="aMG_string">Atlético-MG</string>
    <string name="aPR_string">Atlético-PR</string>
    <string name="avai_string">Avaí</string>
    <string name="bahia_string">Bahia</string>
    <string name="botafogo_string">Botafogo</string>
    <string name="chapocoense_string">Chapecoense</string>
    <string name="corinthians_string">Corinthians</string>
    <string name="coritiba_string">Coritiba</string>
...
