<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learn2fantasy.learn2fantasy.InfoTimeActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/infoTime_container"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/infoTime_textoEscolher"
                    android:text="@string/escolher_time_string"
                    android:textSize="30sp"
                    android:textColor="@color/corDestaque"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_aGO"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/aGO_string"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_textoEscolher"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_aMG"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/aMG_string"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_textoEscolher"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_aPR"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/aPR_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_aGO"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_avai"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/avai_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_aGO"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_bahia"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/bahia_string"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_aPR"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_botafogo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/botafogo_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_aPR"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_chapeco"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/chapocoense_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_bahia"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_corinthians"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/corinthians_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_bahia"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_coritiba"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/coritiba_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_chapeco"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_cruzeiro"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/cruzeiro_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_chapeco"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_flamengo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/flamengo_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_coritiba"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_fluminense"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/fluminense_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_coritiba"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_gremio"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/gremio_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_flamengo"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_palmeiras"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/palmeiras_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_flamengo"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_ptpreta"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/pontePreta_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_gremio"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_santos"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/santos_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_gremio"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/sp_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_ptpreta"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_sport"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/sport_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_ptpreta"
                    app:layout_constraintRight_toRightOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_vasco"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/vasco_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_sp"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/infoTime_vitoria"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:onClick="irExibirTime"
                    android:text="@string/vitoria_string"
                    app:layout_constraintTop_toBottomOf="@id/infoTime_sp"
                    app:layout_constraintRight_toRightOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
