...
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/constraintLayout">

        <Button
            android:id="@+id/menu_compTimes"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
...
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:onClick="menuIr"
            android:text="@string/ranking_time_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_infoTimes" />

        <Button
            android:id="@+id/menu_infoTimes"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
...
